# splitwise-ai

./: .gitignore  README.md  build.sh  pyproject.toml  render.yaml  run_tests.sh
backend/: auth.py  database.py  ledger.py  main.py  migrate_auth.py  migrate_invites.py  models.py  reconciliation.py  requirements.txt  splitter.py
backend/agents/: __init__.py  agent_config.py  context_agent.py  intent_agent.py  ledger_agent.py  notification_agent.py  orchestrator.py  reconciliation_agent.py
backend/tests/: test_suite.py
frontend/: package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/admin/: page.tsx
frontend/src/app/dashboard/: page.tsx
frontend/src/app/expenses/: page.tsx
frontend/src/app/expenses/[id]/: page.tsx
frontend/src/app/groups/: page.tsx
frontend/src/app/groups/[id]/: page.tsx
frontend/src/app/login/: page.tsx
frontend/src/app/register/: page.tsx
frontend/src/components/chat/: ChatInput.tsx  MessageBubble.tsx
frontend/src/components/layout/: AppShell.tsx  BottomNav.tsx  FloatingAIButton.tsx  MobileHeader.tsx  Sidebar.tsx
frontend/src/lib/: api.ts  mock-data.ts
