[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "splitwise-ai"
version = "1.0.0"
description = "AI-Native Expense Sharing Application"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi==0.109.0",
    "uvicorn[standard]==0.27.0",
    "sqlalchemy==2.0.25",
    "aiosqlite==0.19.0",
    "pydantic==2.5.3",
    "python-multipart==0.0.6",
    "websockets==12.0",
    "httpx==0.26.0",
    "openai==1.8.0",
]

[tool.setuptools.packages.find]
where = ["backend"]
